Convert methods to formal prose

--- a/project_final_report_008-17.ipynb
+++ b/project_final_report_008-17.ipynb
@@ -5,7 +5,7 @@
    "id": "d1b40fe1",
    "metadata": {},
    "source": [
-    "# Final Project"
+    "# DSCI 100 Project Final Report 008-17: What Time Windows are Likely to Have Large Numbers of Players?"
    ]
   },
   {
@@ -16,15 +16,11 @@
     "## Introduction\n",
     "Background: A group in Computer Science at UBC is interested in understanding how people play video games. They have set up a server running MineCraft and are recording play sessions. The server is called PlaiCraft.\n",
     "\n",
-    "We are interested in demand forecasting, namely, what time windows are most likely to have large number of simultaneous players. This is because we need to ensure that the number of licenses on hand is sufficiently large to accommodate all parallel players with high probability.\n",
+    "Our project focuses on the second question: What time windows are most likely to have large numbers of simultaneous players? This insight is critical for demand forecasting to ensure that we maintain a sufficient number of licenses to accommodate all players concurrently with a high probability. \n",
     "\n",
-    "Our project focuses on the second question: What time windows are most likely to have large number of simultaneous players? This insight is critical for demand forecasting to ensure that we maintain a sufficient number of licenses to accommodate all players concurrently with a high probability. \n",
+    "Our analysis will involve finding suitable predictor variables for the number of simultaneous players at a given time, our response variable. Specifically, can `month`, `day_of_week`, `hour`, `experience`, and `session_duration` accurately predict the number of simultaneous players (`player_count`) over a 1-hour time window using K-NN regression?\n",
     "\n",
-    "Our analysis will involve the number of simultaneous players at a given time (response variable), session start and end times (explanatory variables).\n",
-    "\n",
-    "Specific Question: Can `time_of_day`, `day_of_week`, `month`, `experience`, and `session_duration` accurately predict the number of simultaneous players (`player_count`) over a 1-hour time window using K-NN regression?\n",
-    "\n",
-    "We will calculate `time_of_day`, `day_of_week`, `month`, `session_duration` from `start_time` and `end_time`, and `player_count` using 1-hour time windows over the time range in the data.\n",
+    "We will calculate `month`, `day_of_week`, `hour`, and `session_duration` from `start_time` and `end_time`, and `player_count` using 1-hour time windows over the time range in the data.\n",
     "\n",
     "Note: we are not using `age`, `subscribe`, or `gender` because they are unreliable - many participants lie about their age and gender and subscribe is unlikely to be indicative of play time."
    ]
@@ -36,38 +32,29 @@
    "source": [
     "## Methods & Results\n",
     "\n",
-    "**Data Wrangling**:\n",
-    "- Loaded player and session datasets using URLs\n",
-    "- Converted `start_time` and `end_time` columns to `POSIXct` using `lubridate::dmy_hm()` for time-based analysis\n",
-    "- Removed unnecessary columns (`individualId`, `organizationName` from players; `original_start_time`, `original_end_time` from sessions)\n",
-    "- Handled missing values using `select_if` to identify columns with `NA` values\n",
+    "### Data Wrangling\n",
     "\n",
-    "**Feature Engineering**:\n",
-    "- Created `time_windows` using `seq()`, `floor_date()`, and `ceiling_date()` to group session data into hourly intervals\n",
-    "- Aggregated data by `time_window` to compute `player_count`, `most_frequent_experience`, and `total_session_duration`\n",
-    "- Encoded categorical variables (`month`, `day_of_week`, `experience`) as numeric\n",
-    "    - Directly converted categorical variables to numbers instead of one-hot encoding because one-hot encoding them resulted in no variation and constant predictors for many subsets of the data\n",
-    "    - Direct conversion to numbers avoided the creation of columns with zero variance\n",
+    "The analysis began by loading the player and session datasets from provided URLs. The `start_time` and `end_time` columns were converted to the `POSIXct` format using the `lubridate::dmy_hm()` function to enable effective time-based analysis. Unnecessary columns, such as `individualId` and `organizationName` from the player dataset and `original_start_time` and `original_end_time` from the session dataset, were removed to streamline the data. Missing values were identified and handled using the `select_if` function to pinpoint columns containing `NA` values.\n",
     "\n",
-    "**KNN Regression**:\n",
-    "- Split data into training (80%) and test (20%) sets using `initial_split()` from `rsample`\n",
-    "- Defined a KNN regression model using `nearest_neighbor()` with `kknn` engine, and set `neighbors` to be tuned\n",
-    "- Set up 5-fold cross-validation using `vfold_cv()` to evaluate model performance\n",
-    "- Implemented forward selection to iteratively add predictors to the model based on minimizing `RMSE` (Root Mean Squared Error)\n",
-    "- Tuned the number of neighbors ,`K`, in between 2 and 50 for each model subset using `tune_grid()` and identified the best `K` for each feature combination\n",
-    "    - Start from 2 to avoid \"`estimate` is constant and has 0 standard deviation\" warning from a constant prediction\n",
-    "    - `K = 1` is unstable and relies on only the nearest neighbor\n",
+    "### Feature Engineering\n",
     "\n",
-    "**Model Selection and Evaluation**:\n",
-    "- Selected the best model based on minimum `RMSE` from the forward selection process, recording both the optimal predictors and corresponding `K`\n",
-    "- Fitted the final model using selected predictors and the optimal `K`\n",
-    "- Evaluated the final model on the test set using `RMSE`, `R^2`, and `MAE`\n",
+    "To facilitate the analysis, time-based features were engineered by creating `time_windows`, grouping session data into hourly intervals. This was done using the `seq()`, `floor_date()`, and `ceiling_date()` functions. Aggregated data was then computed by `time_window`, producing metrics such as `player_count`, `most_frequent_experience`, and `total_session_duration`. Categorical variables, including `month`, `day_of_week`, and `experience`, were directly encoded as numeric values. This was done to avoid the issues associated with one-hot encoding, which resulted in columns with zero variance due to constant predictors in subsets of the data. Direct conversion to numbers ensured that no columns with zero variance were created, thus maintaining meaningful predictive features.\n",
     "\n",
-    "**Results**:\n",
-    "   - The forward selection identified the key predictors `total_session_duration`, `most_frequent_experience`, and `hour`\n",
-    "   - The final model achieved reasonable performance metrics (`RMSE`, `R^2`, and `MAE`) with a lot of room for improvement\n",
+    "### KNN Regression\n",
     "\n",
-    "### Exploratory Data Analysis and Visualization"
+    "The dataset was split into training (80%) and test (20%) sets using the `initial_split()` function from the `rsample` package. A KNN regression model was then defined using the `nearest_neighbor()` function with the `kknn` engine, and the number of neighbors (`K`) was set to be tuned. A 5-fold cross-validation strategy was employed via the `vfold_cv()` function to evaluate model performance.\n",
+    "\n",
+    "Forward selection was used to iteratively add predictors to the model, with the goal of minimizing the **Root Mean Squared Error (RMSE)**. The number of neighbors (`K`) was tuned between 2 and 50 for each feature subset using the `tune_grid()` function, with the best `K` value identified for each combination of predictors. To avoid the \"`estimate` is constant and has 0 standard deviation\" warning, the tuning started at `K = 2`, as `K = 1` was found to be unstable and relied solely on the nearest neighbor.\n",
+    "\n",
+    "### Model Selection and Evaluation\n",
+    "\n",
+    "The model was selected based on the minimum **RMSE** obtained from the forward selection process. Both the optimal set of predictors and the corresponding `K` were recorded. The final model was fitted using the selected predictors and optimal `K`. It was then evaluated on the test set using three performance metrics: **RMSE**, **R-squared (R²)**, and **Mean Absolute Error (MAE)**.\n",
+    "\n",
+    "### Results\n",
+    "\n",
+    "The forward selection process identified **total_session_duration**, **most_frequent_experience**, and **hour** as the key predictors for the model. The final model achieved reasonable performance metrics, with **RMSE** of 1.03, **R²** of 0.358, and **MAE** of 0.633. While the performance is reasonable, there remains considerable room for improvement.\n",
+    "\n",
+    "### Exploratory Data Analysis and Visualization\n"
    ]
   },
   {
@@ -4144,7 +4131,7 @@
     "# Initialize selected predictors list\n",
     "selected_predictors <- c()\n",
     "\n",
-    "# Forward Selection Loop (Smarter approach with all combinations)\n",
+    "# Forward Selection Loop (approach with all combinations)\n",
     "for (i in 1:length(predictors)) {\n",
     "  accs <- list()\n",
     "  models <- list()\n",
